--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,29 +79,21 @@ jobs:
             echo "No Shared Flows modified."
           fi
 
-      # 3️⃣ Deploy Modified API Proxies
-      - name: Deploy Modified API Proxies
+      - name: Deploy Modified API Proxies (Direct Folder)
         run: |
-          mkdir -p proxy-bundles
-          # Detect modified Proxies in this commit
           MODIFIED_PROXIES=$(git diff --name-only HEAD^ HEAD | grep '^proxies/' | cut -d/ -f2 | sort -u || true)
-          
-          if [ -n "$MODIFIED_PROXIES" ]; then
+            
             for PROXY_NAME in $MODIFIED_PROXIES; do
               if [ -d "proxies/$PROXY_NAME/apiproxy" ]; then
-                echo "🚀 Updating Proxy: $PROXY_NAME"
+                echo "🚀 Creating and Deploying Proxy: $PROXY_NAME"
                 
-                # 1. Zip the proxy
-                cd "proxies/$PROXY_NAME" && zip -r "../../proxy-bundles/$PROXY_NAME.zip" apiproxy && cd ../..
-                
-                # 2. Create/Import the bundle (Corrected command for 2025)
+                # Use the path to the folder containing 'apiproxy'
                 apigeecli apis create bundle \
                   --name "$PROXY_NAME" \
-                  -f "proxy-bundles/$PROXY_NAME.zip" \
+                  --proxy-folder "proxies/$PROXY_NAME" \
                   --org ${{ secrets.APIGEE_ORG }} \
                   --default-token
                 
-                # 3. Deploy the latest revision
                 apigeecli apis deploy \
                   --name "$PROXY_NAME" \
                   --org ${{ secrets.APIGEE_ORG }} \
@@ -109,6 +101,3 @@ jobs:
                   --ovr --default-token
               fi
             done
-          else
-            echo "No API Proxies modified."
-          fi
