--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,37 +59,33 @@ jobs:
             done
           fi
 
-      # 1.5 Manage Target Servers
-      - name: Deploy Target Servers
+      # 1.5 Manage Modified Target Servers Only
+      - name: Deploy Modified Target Servers
         run: |
-          TS_DIR="configs/target-servers"
-          
-          if [ -d "$TS_DIR" ] && [ "$(ls -A $TS_DIR/*.json 2>/dev/null)" ]; then
-            for file in "$TS_DIR"/*.json; do
-              # Get filename without extension (e.g., "backend-service-ts")
-              TS_NAME=$(basename "$file" .json)
-              
-              echo "🚀 Syncing Target Server: $TS_NAME"
-              
-              # Import/Update the Target Server
-              # apigeecli uses 'import' to handle create or update from a file
-              apigeecli targetservers create \
-                --org ${{ secrets.APIGEE_ORG }} \
-                --env ${{ secrets.APIGEE_ENV }} \
-                --name "$TS_NAME" \
-                -f "$file" \
-                --default-token || \
-              apigeecli targetservers update \
-                --org ${{ secrets.APIGEE_ORG }} \
-                --env ${{ secrets.APIGEE_ENV }} \
-                --name "$TS_NAME" \
-                -f "$file" \
-                --default-token
-            done
-          else
-            echo "No Target Server configurations found in $TS_DIR"
-          fi
-          
+          # Detect modified Target Server JSONs
+          MODIFIED_TS=$(git diff --name-only HEAD^ HEAD | grep '^configs/target-servers/' | sort -u || true)
+
+         if [ -n "$MODIFIED_TS" ]; then
+           for file in $MODIFIED_TS; do
+             if [ -f "$file" ]; then
+               TS_NAME=$(basename "$file" .json)
+               echo "🚀 Syncing Modified Target Server: $TS_NAME"
+
+               # We use 'import' on the specific file because 'create/update' 
+               # flags don't support JSON files directly.
+               # 'import' works on a folder, so we point it to the file's parent.
+               apigeecli targetservers import \
+                 --org ${{ secrets.APIGEE_ORG }} \
+                 --env ${{ secrets.APIGEE_ENV }} \
+                 --folder "$(dirname "$file")" \
+                 --default-token
+             fi
+           done
+         else
+           echo "No Target Servers modified."
+         fi
+
+
       # 2️⃣ Deploy Modified Shared Flows (Direct Folder)
       - name: Deploy Modified Shared Flows
         run: |
