--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,35 @@
-name: Apigee X CI/CD (Industry Standard)
-
-on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch: # Allows manual full deployment if needed
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: 'read'
-      id-token: 'write' # 🟢 REQUIRED for Workload Identity Federation
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # 🟢 REQUIRED to detect modified files via git diff
-
-      - name: Authenticate to Google Cloud
-        uses: 'google-github-actions/auth@v2'
-        with:
-          # Using your generated WIF Provider and Service Account
-          workload_identity_provider: 'projects/1041995087153/locations/global/workloadIdentityPools/github-pool/providers/github'
-          service_account: 'apigee-deploy-sa@bamboo-zone-363116.iam.gserviceaccount.com'
-
-      - name: Install apigeecli
-        run: |
+---
+  name: Apigee X CI/CD (Industry Standard)
+  on:
+    push:
+      branches:
+        - main
+    workflow_dispatch: null
+  jobs:
+    deploy:
+      runs-on: ubuntu-latest
+      permissions:
+        contents: read
+        id-token: write
+      steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
+        - name: Authenticate to Google Cloud
+          uses: google-github-actions/auth@v2
+          with:
+            workload_identity_provider: projects/1041995087153/locations/global/workloadIdentityPools/github-pool/providers/github
+            service_account: apigee-deploy-sa@bamboo-zone-363116.iam.gserviceaccount.com
+        - name: Install apigeecli
+          run: >
             # 1. Download the installer to a file
+  
             curl -L https://raw.githubusercontent.com/apigee/apigeecli/main/downloadLatest.sh -o install_apigeecli.sh
-            
+  
+  
             # 2. Check if the file was downloaded successfully and is not empty
+  
             if [ -s install_apigeecli.sh ]; then
               chmod +x install_apigeecli.sh
               ./install_apigeecli.sh
@@ -41,98 +40,95 @@ jobs:
               echo "Error: apigeecli installer download failed or file is empty."
               exit 1
             fi
-
-      # 1️⃣ Manage Environment Configs (KVMs)
-      # Scans configs/kvms/*.json and syncs them
-      - name: Deploy KVMs
-        run: |
-          if [ -d "configs/kvms" ]; then
-            for file in configs/kvms/*.json; do
-              KVM_NAME=$(basename "$file" .json)
-              echo "Processing KVM: $KVM_NAME"
-              # Create KVM if not exists
-              apigeecli kvms create --org ${{ secrets.APIGEE_ORG }} --env ${{ secrets.APIGEE_ENV }} \
-                --name "$KVM_NAME" --default-token || true
-              # Import entries from JSON file
-              apigeecli kvms entries import --org ${{ secrets.APIGEE_ORG }} --env ${{ secrets.APIGEE_ENV }} \
-                --map "$KVM_NAME" -f "$file" --default-token
-            done
-          fi
-
-      # 1.5 Manage Modified Target Servers Only
-      - name: Deploy Modified Target Servers
-        run: |
-          # Detect modified Target Server JSONs
-          MODIFIED_TS=$(git diff --name-only HEAD^ HEAD | grep '^configs/target-servers/' | sort -u || true)
-
-         if [ -n "$MODIFIED_TS" ]; then
-           for file in $MODIFIED_TS; do
-             if [ -f "$file" ]; then
-               TS_NAME=$(basename "$file" .json)
-               echo "🚀 Syncing Modified Target Server: $TS_NAME"
-
-               # We use 'import' on the specific file because 'create/update' 
-               # flags don't support JSON files directly.
-               # 'import' works on a folder, so we point it to the file's parent.
-               apigeecli targetservers import \
+        - name: Deploy KVMs
+          run: >
+            if [ -d "configs/kvms" ]; then
+              for file in configs/kvms/*.json; do
+                KVM_NAME=$(basename "$file" .json)
+                echo "Processing KVM: $KVM_NAME"
+                # Create KVM if not exists
+                apigeecli kvms create --org ${{ secrets.APIGEE_ORG }} --env ${{ secrets.APIGEE_ENV }} \
+                  --name "$KVM_NAME" --default-token || true
+                # Import entries from JSON file
+                apigeecli kvms entries import --org ${{ secrets.APIGEE_ORG }} --env ${{ secrets.APIGEE_ENV }} \
+                  --map "$KVM_NAME" -f "$file" --default-token
+              done
+            fi
+        - name: Deploy Modified Target Servers
+          run: >
+            # Detect modified Target Server JSONs
+  
+            MODIFIED_TS=$(git diff --name-only HEAD^ HEAD | grep '^configs/target-servers/' | sort -u || true)
+  
+  
+            if [ -n "$MODIFIED_TS" ]; then
+             for file in $MODIFIED_TS; do
+               if [ -f "$file" ]; then
+                 TS_NAME=$(basename "$file" .json)
+                 echo "🚀 Syncing Modified Target Server: $TS_NAME"
+  
+                 # We use 'import' on the specific file because 'create/update' 
+                 # flags don't support JSON files directly.
+                 # 'import' works on a folder, so we point it to the file's parent.
+                 apigeecli targetservers import \
+                   --org ${{ secrets.APIGEE_ORG }} \
+                   --env ${{ secrets.APIGEE_ENV }} \
+                   --folder "$(dirname "$file")" \
+                   --default-token
+            fi
+             done
+            else
+             echo "No Target Servers modified."
+            fi
+        - name: Deploy Modified Shared Flows
+          run: >
+            MODIFIED_SFS=$(git diff --name-only HEAD^ HEAD | grep '^sharedflows/' | cut
+            -d/ -f2 | sort -u || true)
+  
+            for SF_NAME in $MODIFIED_SFS; do
+             # Check if the sharedflowbundle directory exists
+             if [ -d "sharedflows/$SF_NAME/sharedflowbundle" ]; then
+               echo "Creating and Deploying Shared Flow: $SF_NAME"
+               
+               # Use --sf-folder to point directly to the sharedflowbundle directory
+               apigeecli sharedflows create bundle \
+                 --name "$SF_NAME" \
+                 --sf-folder "sharedflows/$SF_NAME/sharedflowbundle" \
+                 --org ${{ secrets.APIGEE_ORG }} \
+                 --default-token
+               
+               # Deploy the latest revision
+               apigeecli sharedflows deploy \
+                 --name "$SF_NAME" \
                  --org ${{ secrets.APIGEE_ORG }} \
                  --env ${{ secrets.APIGEE_ENV }} \
-                 --folder "$(dirname "$file")" \
-                 --default-token
+                 --ovr --default-token
              fi
-           done
-         else
-           echo "No Target Servers modified."
-         fi
-
-
-      # 2️⃣ Deploy Modified Shared Flows (Direct Folder)
-      - name: Deploy Modified Shared Flows
-        run: |
-          MODIFIED_SFS=$(git diff --name-only HEAD^ HEAD | grep '^sharedflows/' | cut -d/ -f2 | sort -u || true)
-          for SF_NAME in $MODIFIED_SFS; do
-           # Check if the sharedflowbundle directory exists
-           if [ -d "sharedflows/$SF_NAME/sharedflowbundle" ]; then
-             echo "Creating and Deploying Shared Flow: $SF_NAME"
-             
-             # Use --sf-folder to point directly to the sharedflowbundle directory
-             apigeecli sharedflows create bundle \
-               --name "$SF_NAME" \
-               --sf-folder "sharedflows/$SF_NAME/sharedflowbundle" \
-               --org ${{ secrets.APIGEE_ORG }} \
-               --default-token
-             
-             # Deploy the latest revision
-             apigeecli sharedflows deploy \
-               --name "$SF_NAME" \
-               --org ${{ secrets.APIGEE_ORG }} \
-               --env ${{ secrets.APIGEE_ENV }} \
-               --ovr --default-token
-           fi
-          done
-
-      - name: Deploy Modified API Proxies
-        run: |
-          MODIFIED_PROXIES=$(git diff --name-only HEAD^ HEAD | grep '^proxies/' | cut -d/ -f2 | sort -u || true)
-            
-            for PROXY_NAME in $MODIFIED_PROXIES; do
-              # Check if the apiproxy directory exists
-              if [ -d "proxies/$PROXY_NAME/apiproxy" ]; then
-                echo "🚀 Creating and Deploying Proxy: $PROXY_NAME"
-                
-                # Standard Fix: Point to the folder that CONTAINS the apiproxy directory
-                # For many apigeecli versions, this is proxies/$PROXY_NAME/
-                apigeecli apis create bundle \
-                  --name "$PROXY_NAME" \
-                  --proxy-folder "proxies/$PROXY_NAME/apiproxy" \
-                  --org ${{ secrets.APIGEE_ORG }} \
-                  --default-token
-                
-                # Deploy the latest revision
-                apigeecli apis deploy \
-                  --name "$PROXY_NAME" \
-                  --org ${{ secrets.APIGEE_ORG }} \
-                  --env ${{ secrets.APIGEE_ENV }} \
-                  --ovr --default-token
-              fi
             done
+        - name: Deploy Modified API Proxies
+          run: >
+            MODIFIED_PROXIES=$(git diff --name-only HEAD^ HEAD | grep '^proxies/' | cut
+            -d/ -f2 | sort -u || true)
+              
+              for PROXY_NAME in $MODIFIED_PROXIES; do
+                # Check if the apiproxy directory exists
+                if [ -d "proxies/$PROXY_NAME/apiproxy" ]; then
+                  echo "🚀 Creating and Deploying Proxy: $PROXY_NAME"
+                  
+                  # Standard Fix: Point to the folder that CONTAINS the apiproxy directory
+                  # For many apigeecli versions, this is proxies/$PROXY_NAME/
+                  apigeecli apis create bundle \
+                    --name "$PROXY_NAME" \
+                    --proxy-folder "proxies/$PROXY_NAME/apiproxy" \
+                    --org ${{ secrets.APIGEE_ORG }} \
+                    --default-token
+                  
+                  # Deploy the latest revision
+                  apigeecli apis deploy \
+                    --name "$PROXY_NAME" \
+                    --org ${{ secrets.APIGEE_ORG }} \
+                    --env ${{ secrets.APIGEE_ENV }} \
+                    --ovr --default-token
+                fi
+              done
+  
