--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,12 +86,14 @@ jobs:
                 
                 # Try to create the cache first. If it fails (already exists), then update it.
                 # Note: 'create' only accepts flags, not a file input.
-                apigeecli environments caches create \
-                  --name "$CACHE_NAME" \
-                  --org "${{ secrets.APIGEE_ORG }}" \
-                  --env "${{ secrets.APIGEE_ENV }}" \
-                  --desc "$DESC" \
-                  --default-token
+                # apigeecli environments caches create \
+                #   --name "$CACHE_NAME" \
+                #   --org "${{ secrets.APIGEE_ORG }}" \
+                #   --env "${{ secrets.APIGEE_ENV }}" \
+                #   --desc "$DESC" \
+                #   --default-token
+                 
+                  apigeecli environments caches create --help
                 
                 echo "✅ Cache '$CACHE_NAME' deployed successfully."
               fi
